src/grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     empty -> <empty>
Rule 3     bloc -> bloc statement SEMI
Rule 4     bloc -> statement SEMI
Rule 5     param -> NAME
Rule 6     param -> TIMES NAME
Rule 7     params -> <empty>
Rule 8     params -> param
Rule 9     params -> param COMMA params
Rule 10    elif_list -> empty
Rule 11    elif_list -> elif_list ELIF LPAREN expression RPAREN LACC bloc RACC
Rule 12    else_opt -> empty
Rule 13    else_opt -> ELSE LACC bloc RACC
Rule 14    statement -> IF LPAREN expression RPAREN LACC bloc RACC elif_list else_opt
Rule 15    statement -> WHILE LPAREN expression RPAREN LACC bloc RACC
Rule 16    statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
Rule 17    statement -> PRINT LPAREN expression RPAREN
Rule 18    statement -> NAME EGAL expression
Rule 19    statement -> TIMES NAME EGAL expression
Rule 20    statement -> DEF NAME LPAREN params RPAREN LACC bloc RACC
Rule 21    statement -> RETURN expression
Rule 22    statement -> expression
Rule 23    expression -> REF NAME
Rule 24    expression -> expression INF expression
Rule 25    expression -> expression INFEG expression
Rule 26    expression -> expression SUPEG expression
Rule 27    expression -> expression SUP expression
Rule 28    expression -> expression EGALEGAL expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> expression NOTEG expression
Rule 36    expression -> expression MODULO expression
Rule 37    expression -> NAME LPAREN args RPAREN
Rule 38    args -> <empty>
Rule 39    args -> expression
Rule 40    args -> expression COMMA args
Rule 41    expression -> LPAREN expression RPAREN
Rule 42    expression -> NUMBER
Rule 43    expression -> FLOAT
Rule 44    expression -> STRING
Rule 45    expression -> TRUE
Rule 46    expression -> FALSE
Rule 47    expression -> NAME
Rule 48    expression -> TIMES NAME
Rule 49    statement -> ELSE

Terminals, with rules where they appear

AND                  : 29
COMMA                : 9 40
DEF                  : 20
DIVIDE               : 34
EGAL                 : 18 19
EGALEGAL             : 28
ELIF                 : 11
ELSE                 : 13 49
FALSE                : 46
FLOAT                : 43
FOR                  : 16
IF                   : 14
INF                  : 24
INFEG                : 25
LACC                 : 11 13 14 15 16 20
LPAREN               : 11 14 15 16 17 20 37 41
MINUS                : 33
MODULO               : 36
NAME                 : 5 6 18 19 20 23 37 47 48
NOTEG                : 35
NUMBER               : 42
OR                   : 30
PLUS                 : 31
PRINT                : 17
RACC                 : 11 13 14 15 16 20
REF                  : 23
RETURN               : 21
RPAREN               : 11 14 15 16 17 20 37 41
SEMI                 : 3 4 16 16
STRING               : 44
SUP                  : 27
SUPEG                : 26
TIMES                : 6 19 32 48
TRUE                 : 45
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

args                 : 37 40
bloc                 : 1 3 11 13 14 15 16 20
elif_list            : 11 14
else_opt             : 14
empty                : 10 12
expression           : 11 14 15 16 17 18 19 21 22 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 39 40 41
param                : 8 9
params               : 9 20
start                : 0
statement            : 3 4 16 16

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (3) bloc -> . bloc statement SEMI
    (4) bloc -> . statement SEMI
    (14) statement -> . IF LPAREN expression RPAREN LACC bloc RACC elif_list else_opt
    (15) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (16) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (17) statement -> . PRINT LPAREN expression RPAREN
    (18) statement -> . NAME EGAL expression
    (19) statement -> . TIMES NAME EGAL expression
    (20) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (21) statement -> . RETURN expression
    (22) statement -> . expression
    (49) statement -> . ELSE
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 10
    TIMES           shift and go to state 11
    DEF             shift and go to state 12
    RETURN          shift and go to state 13
    ELSE            shift and go to state 14
    REF             shift and go to state 15
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (3) bloc -> bloc . statement SEMI
    (14) statement -> . IF LPAREN expression RPAREN LACC bloc RACC elif_list else_opt
    (15) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (16) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (17) statement -> . PRINT LPAREN expression RPAREN
    (18) statement -> . NAME EGAL expression
    (19) statement -> . TIMES NAME EGAL expression
    (20) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (21) statement -> . RETURN expression
    (22) statement -> . expression
    (49) statement -> . ELSE
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    $end            reduce using rule 1 (start -> bloc .)
    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 10
    TIMES           shift and go to state 11
    DEF             shift and go to state 12
    RETURN          shift and go to state 13
    ELSE            shift and go to state 14
    REF             shift and go to state 15
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20

    statement                      shift and go to state 21
    expression                     shift and go to state 6

state 3

    (4) bloc -> statement . SEMI

    SEMI            shift and go to state 22


state 4

    (14) statement -> IF . LPAREN expression RPAREN LACC bloc RACC elif_list else_opt

    LPAREN          shift and go to state 23


state 5

    (41) expression -> LPAREN . expression RPAREN
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 24

state 6

    (22) statement -> expression .
    (24) expression -> expression . INF expression
    (25) expression -> expression . INFEG expression
    (26) expression -> expression . SUPEG expression
    (27) expression -> expression . SUP expression
    (28) expression -> expression . EGALEGAL expression
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . DIVIDE expression
    (35) expression -> expression . NOTEG expression
    (36) expression -> expression . MODULO expression

    SEMI            reduce using rule 22 (statement -> expression .)
    RPAREN          reduce using rule 22 (statement -> expression .)
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUPEG           shift and go to state 29
    SUP             shift and go to state 30
    EGALEGAL        shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33
    PLUS            shift and go to state 34
    TIMES           shift and go to state 35
    MINUS           shift and go to state 36
    DIVIDE          shift and go to state 37
    NOTEG           shift and go to state 38
    MODULO          shift and go to state 39


state 7

    (15) statement -> WHILE . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 40


state 8

    (16) statement -> FOR . LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC

    LPAREN          shift and go to state 41


state 9

    (17) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 42


state 10

    (18) statement -> NAME . EGAL expression
    (37) expression -> NAME . LPAREN args RPAREN
    (47) expression -> NAME .

    EGAL            shift and go to state 43
    LPAREN          shift and go to state 44
    INF             reduce using rule 47 (expression -> NAME .)
    INFEG           reduce using rule 47 (expression -> NAME .)
    SUPEG           reduce using rule 47 (expression -> NAME .)
    SUP             reduce using rule 47 (expression -> NAME .)
    EGALEGAL        reduce using rule 47 (expression -> NAME .)
    AND             reduce using rule 47 (expression -> NAME .)
    OR              reduce using rule 47 (expression -> NAME .)
    PLUS            reduce using rule 47 (expression -> NAME .)
    TIMES           reduce using rule 47 (expression -> NAME .)
    MINUS           reduce using rule 47 (expression -> NAME .)
    DIVIDE          reduce using rule 47 (expression -> NAME .)
    NOTEG           reduce using rule 47 (expression -> NAME .)
    MODULO          reduce using rule 47 (expression -> NAME .)
    SEMI            reduce using rule 47 (expression -> NAME .)
    RPAREN          reduce using rule 47 (expression -> NAME .)


state 11

    (19) statement -> TIMES . NAME EGAL expression
    (48) expression -> TIMES . NAME

    NAME            shift and go to state 45


state 12

    (20) statement -> DEF . NAME LPAREN params RPAREN LACC bloc RACC

    NAME            shift and go to state 46


state 13

    (21) statement -> RETURN . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 47

state 14

    (49) statement -> ELSE .

    SEMI            reduce using rule 49 (statement -> ELSE .)
    RPAREN          reduce using rule 49 (statement -> ELSE .)


state 15

    (23) expression -> REF . NAME

    NAME            shift and go to state 48


state 16

    (42) expression -> NUMBER .

    INF             reduce using rule 42 (expression -> NUMBER .)
    INFEG           reduce using rule 42 (expression -> NUMBER .)
    SUPEG           reduce using rule 42 (expression -> NUMBER .)
    SUP             reduce using rule 42 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 42 (expression -> NUMBER .)
    AND             reduce using rule 42 (expression -> NUMBER .)
    OR              reduce using rule 42 (expression -> NUMBER .)
    PLUS            reduce using rule 42 (expression -> NUMBER .)
    TIMES           reduce using rule 42 (expression -> NUMBER .)
    MINUS           reduce using rule 42 (expression -> NUMBER .)
    DIVIDE          reduce using rule 42 (expression -> NUMBER .)
    NOTEG           reduce using rule 42 (expression -> NUMBER .)
    MODULO          reduce using rule 42 (expression -> NUMBER .)
    SEMI            reduce using rule 42 (expression -> NUMBER .)
    RPAREN          reduce using rule 42 (expression -> NUMBER .)
    COMMA           reduce using rule 42 (expression -> NUMBER .)


state 17

    (43) expression -> FLOAT .

    INF             reduce using rule 43 (expression -> FLOAT .)
    INFEG           reduce using rule 43 (expression -> FLOAT .)
    SUPEG           reduce using rule 43 (expression -> FLOAT .)
    SUP             reduce using rule 43 (expression -> FLOAT .)
    EGALEGAL        reduce using rule 43 (expression -> FLOAT .)
    AND             reduce using rule 43 (expression -> FLOAT .)
    OR              reduce using rule 43 (expression -> FLOAT .)
    PLUS            reduce using rule 43 (expression -> FLOAT .)
    TIMES           reduce using rule 43 (expression -> FLOAT .)
    MINUS           reduce using rule 43 (expression -> FLOAT .)
    DIVIDE          reduce using rule 43 (expression -> FLOAT .)
    NOTEG           reduce using rule 43 (expression -> FLOAT .)
    MODULO          reduce using rule 43 (expression -> FLOAT .)
    SEMI            reduce using rule 43 (expression -> FLOAT .)
    RPAREN          reduce using rule 43 (expression -> FLOAT .)
    COMMA           reduce using rule 43 (expression -> FLOAT .)


state 18

    (44) expression -> STRING .

    INF             reduce using rule 44 (expression -> STRING .)
    INFEG           reduce using rule 44 (expression -> STRING .)
    SUPEG           reduce using rule 44 (expression -> STRING .)
    SUP             reduce using rule 44 (expression -> STRING .)
    EGALEGAL        reduce using rule 44 (expression -> STRING .)
    AND             reduce using rule 44 (expression -> STRING .)
    OR              reduce using rule 44 (expression -> STRING .)
    PLUS            reduce using rule 44 (expression -> STRING .)
    TIMES           reduce using rule 44 (expression -> STRING .)
    MINUS           reduce using rule 44 (expression -> STRING .)
    DIVIDE          reduce using rule 44 (expression -> STRING .)
    NOTEG           reduce using rule 44 (expression -> STRING .)
    MODULO          reduce using rule 44 (expression -> STRING .)
    SEMI            reduce using rule 44 (expression -> STRING .)
    RPAREN          reduce using rule 44 (expression -> STRING .)
    COMMA           reduce using rule 44 (expression -> STRING .)


state 19

    (45) expression -> TRUE .

    INF             reduce using rule 45 (expression -> TRUE .)
    INFEG           reduce using rule 45 (expression -> TRUE .)
    SUPEG           reduce using rule 45 (expression -> TRUE .)
    SUP             reduce using rule 45 (expression -> TRUE .)
    EGALEGAL        reduce using rule 45 (expression -> TRUE .)
    AND             reduce using rule 45 (expression -> TRUE .)
    OR              reduce using rule 45 (expression -> TRUE .)
    PLUS            reduce using rule 45 (expression -> TRUE .)
    TIMES           reduce using rule 45 (expression -> TRUE .)
    MINUS           reduce using rule 45 (expression -> TRUE .)
    DIVIDE          reduce using rule 45 (expression -> TRUE .)
    NOTEG           reduce using rule 45 (expression -> TRUE .)
    MODULO          reduce using rule 45 (expression -> TRUE .)
    SEMI            reduce using rule 45 (expression -> TRUE .)
    RPAREN          reduce using rule 45 (expression -> TRUE .)
    COMMA           reduce using rule 45 (expression -> TRUE .)


state 20

    (46) expression -> FALSE .

    INF             reduce using rule 46 (expression -> FALSE .)
    INFEG           reduce using rule 46 (expression -> FALSE .)
    SUPEG           reduce using rule 46 (expression -> FALSE .)
    SUP             reduce using rule 46 (expression -> FALSE .)
    EGALEGAL        reduce using rule 46 (expression -> FALSE .)
    AND             reduce using rule 46 (expression -> FALSE .)
    OR              reduce using rule 46 (expression -> FALSE .)
    PLUS            reduce using rule 46 (expression -> FALSE .)
    TIMES           reduce using rule 46 (expression -> FALSE .)
    MINUS           reduce using rule 46 (expression -> FALSE .)
    DIVIDE          reduce using rule 46 (expression -> FALSE .)
    NOTEG           reduce using rule 46 (expression -> FALSE .)
    MODULO          reduce using rule 46 (expression -> FALSE .)
    SEMI            reduce using rule 46 (expression -> FALSE .)
    RPAREN          reduce using rule 46 (expression -> FALSE .)
    COMMA           reduce using rule 46 (expression -> FALSE .)


state 21

    (3) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 49


state 22

    (4) bloc -> statement SEMI .

    IF              reduce using rule 4 (bloc -> statement SEMI .)
    WHILE           reduce using rule 4 (bloc -> statement SEMI .)
    FOR             reduce using rule 4 (bloc -> statement SEMI .)
    PRINT           reduce using rule 4 (bloc -> statement SEMI .)
    NAME            reduce using rule 4 (bloc -> statement SEMI .)
    TIMES           reduce using rule 4 (bloc -> statement SEMI .)
    DEF             reduce using rule 4 (bloc -> statement SEMI .)
    RETURN          reduce using rule 4 (bloc -> statement SEMI .)
    ELSE            reduce using rule 4 (bloc -> statement SEMI .)
    REF             reduce using rule 4 (bloc -> statement SEMI .)
    LPAREN          reduce using rule 4 (bloc -> statement SEMI .)
    NUMBER          reduce using rule 4 (bloc -> statement SEMI .)
    FLOAT           reduce using rule 4 (bloc -> statement SEMI .)
    STRING          reduce using rule 4 (bloc -> statement SEMI .)
    TRUE            reduce using rule 4 (bloc -> statement SEMI .)
    FALSE           reduce using rule 4 (bloc -> statement SEMI .)
    $end            reduce using rule 4 (bloc -> statement SEMI .)
    RACC            reduce using rule 4 (bloc -> statement SEMI .)


state 23

    (14) statement -> IF LPAREN . expression RPAREN LACC bloc RACC elif_list else_opt
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 50

state 24

    (41) expression -> LPAREN expression . RPAREN
    (24) expression -> expression . INF expression
    (25) expression -> expression . INFEG expression
    (26) expression -> expression . SUPEG expression
    (27) expression -> expression . SUP expression
    (28) expression -> expression . EGALEGAL expression
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . DIVIDE expression
    (35) expression -> expression . NOTEG expression
    (36) expression -> expression . MODULO expression

    RPAREN          shift and go to state 51
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUPEG           shift and go to state 29
    SUP             shift and go to state 30
    EGALEGAL        shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33
    PLUS            shift and go to state 34
    TIMES           shift and go to state 35
    MINUS           shift and go to state 36
    DIVIDE          shift and go to state 37
    NOTEG           shift and go to state 38
    MODULO          shift and go to state 39


state 25

    (37) expression -> NAME . LPAREN args RPAREN
    (47) expression -> NAME .

    LPAREN          shift and go to state 44
    RPAREN          reduce using rule 47 (expression -> NAME .)
    INF             reduce using rule 47 (expression -> NAME .)
    INFEG           reduce using rule 47 (expression -> NAME .)
    SUPEG           reduce using rule 47 (expression -> NAME .)
    SUP             reduce using rule 47 (expression -> NAME .)
    EGALEGAL        reduce using rule 47 (expression -> NAME .)
    AND             reduce using rule 47 (expression -> NAME .)
    OR              reduce using rule 47 (expression -> NAME .)
    PLUS            reduce using rule 47 (expression -> NAME .)
    TIMES           reduce using rule 47 (expression -> NAME .)
    MINUS           reduce using rule 47 (expression -> NAME .)
    DIVIDE          reduce using rule 47 (expression -> NAME .)
    NOTEG           reduce using rule 47 (expression -> NAME .)
    MODULO          reduce using rule 47 (expression -> NAME .)
    SEMI            reduce using rule 47 (expression -> NAME .)
    COMMA           reduce using rule 47 (expression -> NAME .)


state 26

    (48) expression -> TIMES . NAME

    NAME            shift and go to state 52


state 27

    (24) expression -> expression INF . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 53

state 28

    (25) expression -> expression INFEG . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 54

state 29

    (26) expression -> expression SUPEG . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 55

state 30

    (27) expression -> expression SUP . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 56

state 31

    (28) expression -> expression EGALEGAL . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 57

state 32

    (29) expression -> expression AND . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 58

state 33

    (30) expression -> expression OR . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression NOTEG expression
    (36) expression -> . expression MODULO expression
    (37) expression -> . NAME LPAREN args RPAREN
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . NUMBER
    (43) expression -> . FLOAT
    (44) expression -> . STRING
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NAME
    (48) expression -> . TIMES NAME

    REF             shift and go to state 15
    NAME            shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    TIMES           shift and go to state 26

    expression                     shift and go to state 59

state 34

    (31) expression -> expression PLUS . expression
    (23) expression -> . REF NAME
    (24) expression -> . expression INF expression
    (25) expression -> . expression INFEG expression
    (26) expression -> . expression SUPEG expression
    (27) expression -> . expression SUP expression
    (28) expression -> . expression EGALEGAL expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression PLUS expression
